--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
 </head>
 
 <body>
+    <div class="web">
+        <div class="web1">
+
+        </div>
+
+
+
+        <div class="web2">
+
+        </div>
+        <div class="spider_line">
+
+        </div>
+        <div class="spider">
+
+        </div>
+    </div>
+
     <div class="svg">
         <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,192L21.8,186.7C43.6,181,87,171,131,186.7C174.5,203,218,245,262,240C305.5,235,349,181,393,186.7C436.4,192,480,256,524,261.3C567.3,267,611,213,655,202.7C698.2,192,742,224,785,197.3C829.1,171,873,85,916,80C960,75,1004,149,1047,186.7C1090.9,224,1135,224,1178,202.7C1221.8,181,1265,139,1309,122.7C1352.7,107,1396,117,1418,122.7L1440,128L1440,0L1418.2,0C1396.4,0,1353,0,1309,0C1265.5,0,1222,0,1178,0C1134.5,0,1091,0,1047,0C1003.6,0,960,0,916,0C872.7,0,829,0,785,0C741.8,0,698,0,655,0C610.9,0,567,0,524,0C480,0,436,0,393,0C349.1,0,305,0,262,0C218.2,0,175,0,131,0C87.3,0,44,0,22,0L0,0Z"></path></svg>
     </div>
@@ -24,6 +42,7 @@
     </div>
 
     <div class="l_container">
+
         <div class="intro_left">
             <h1 class="orange">Halloween season is here</h1>
             <br>
