--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
     <div class="l_container">
 
-        <div class="intro_left">
-            <h1 class="orange">Halloween season is here</h1>
+        <div class="intro_left m_top">
+            <h1 class="orange">Halloween Season Is Here</h1>
             <br>
             <p>
-                So this <span class="orange">halloween</span> season come and join us for light as feather
+                So this <span class="orange">Spooky Season</span> give your houses some makeover and make them look spookiest in the town and give the <span class="orange">Halloween</span> some life.....!
             </p>
         </div>
 
@@ -60,6 +60,39 @@
 
     </div>
 
+    <div class="container2">
+        <div class="intro_left">
+            <div class="makeup">
+
+            </div>
+        </div>
+
+        <div class="intro_right m_top">
+            <h1 class="orange">Get Your Costumes</h1>
+            <br>
+            <p>
+                Get your <span class="orange">Costumes</span> ready and give yourself lil touch of makeup, gather your friends around because this is going to be a long <span class="orange">Spooky</span> night....!
+            </p>
+        </div>
+    </div>
+
+    <div class="container3">
+        <div class="intro_left m_top">
+            <h1 class="orange">
+                Trick Or Treat
+            </h1>
+            <br>
+            <p>
+                <span class="orange"> Trick Or Treat</span> is an important part of <span class="orange">Halloween</span>, so you better buy come candies and make some goodies from stores for kids who are coming to show you their costumes....!
+            </p>
+        </div>
+
+        <div class="intro_right">
+            <div class="t_t">
+
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
