--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-
+    <link rel="shortcut icon" type="image/png" href="ouija.png">
     <link href="https://fonts.googleapis.com/css2?family=Grey+Qo&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="index.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Halloween Project</title>
 </head>
 
 <body>
@@ -92,6 +92,52 @@
 
             </div>
         </div>
+    </div>
+
+    <div class="container4">
+
+        <div class="intro_left">
+            <div class="game">
+
+            </div>
+
+        </div>
+
+        <div class="intro_right m_top">
+            <h1 class="orange">
+                Games At Graveyard
+            </h1>
+            <br>
+            <p>
+                Its a <span class="orange"> Spooky Season</span>, so we can't call it a day off without playing games at <span class="orange">Graveyard </span> souls are ready to be your auidence and watch you play <span class="orange"> Ouija Or Light As Feather Stiff As Board</span>....!
+            </p>
+        </div>
+    </div>
+
+    <div class="footer">
+
+        <div class="contact_me">
+
+            <div class="ouija">
+                <a href="mailto:mahadqureshi410@gmail.com">
+                    <p class="black">
+                        Contact Me
+                    </p>
+                </a>
+
+            </div>
+
+            <h1>
+                Made with ❤️ by Mahad Qureshi
+            </h1>
+        </div>
+        <div class="f_svg">
+
+            <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,64L15,85.3C30,107,60,149,90,154.7C120,160,150,128,180,128C210,128,240,160,270,170.7C300,181,330,171,360,181.3C390,192,420,224,450,208C480,192,510,128,540,133.3C570,139,600,213,630,218.7C660,224,690,160,720,122.7C750,85,780,75,810,58.7C840,43,870,21,900,42.7C930,64,960,128,990,160C1020,192,1050,192,1080,186.7C1110,181,1140,171,1170,186.7C1200,203,1230,245,1260,224C1290,203,1320,117,1350,112C1380,107,1410,181,1425,218.7L1440,256L1440,320L1425,320C1410,320,1380,320,1350,320C1320,320,1290,320,1260,320C1230,320,1200,320,1170,320C1140,320,1110,320,1080,320C1050,320,1020,320,990,320C960,320,930,320,900,320C870,320,840,320,810,320C780,320,750,320,720,320C690,320,660,320,630,320C600,320,570,320,540,320C510,320,480,320,450,320C420,320,390,320,360,320C330,320,300,320,270,320C240,320,210,320,180,320C150,320,120,320,90,320C60,320,30,320,15,320L0,320Z"></path></svg>
+
+
+        </div>
+
     </div>
 </body>
 
