--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </h1>
             <br>
             <p>
-                Its a <span class="orange"> Spooky Season</span>, so we can't call it a day off without playing games at <span class="orange">Graveyard </span> souls are ready to be your auidence and watch you play <span class="orange"> Ouija Or Light As Feather Stiff As Board</span>....!
+                Its a <span class="orange"> Spooky Season</span>, so we can't call it a day off without playing games at <span class="orange">Graveyard </span> souls are ready to be your audience and watch you play <span class="orange"> Ouija Or Light As Feather Stiff As Board</span>....!
             </p>
         </div>
     </div>
@@ -126,10 +126,6 @@
                 </a>
 
             </div>
-
-            <h1>
-                Made with ❤️ by Mahad Qureshi
-            </h1>
         </div>
         <div class="f_svg">
 
