--- a/index.html
+++ b/index.html
@@ -2,140 +2,187 @@
 <html lang="en">
 
 <head>
-    <link rel="shortcut icon" type="image/png" href="ouija.png">
-    <link href="https://fonts.googleapis.com/css2?family=Grey+Qo&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="icon/png" href="ouija.png">
     <link href="https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <meta charset="UTF-8">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="index.css" <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halloween Project</title>
+    <title>Document</title>
 </head>
 
 <body>
-    <div class="web">
-        <div class="web1">
-
-        </div>
+    <div class="container">
 
 
+        <!-- Header -->
+        <header class="h_svg">
+            <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,192L21.8,186.7C43.6,181,87,171,131,186.7C174.5,203,218,245,262,240C305.5,235,349,181,393,186.7C436.4,192,480,256,524,261.3C567.3,267,611,213,655,202.7C698.2,192,742,224,785,197.3C829.1,171,873,85,916,80C960,75,1004,149,1047,186.7C1090.9,224,1135,224,1178,202.7C1221.8,181,1265,139,1309,122.7C1352.7,107,1396,117,1418,122.7L1440,128L1440,0L1418.2,0C1396.4,0,1353,0,1309,0C1265.5,0,1222,0,1178,0C1134.5,0,1091,0,1047,0C1003.6,0,960,0,916,0C872.7,0,829,0,785,0C741.8,0,698,0,655,0C610.9,0,567,0,524,0C480,0,436,0,393,0C349.1,0,305,0,262,0C218.2,0,175,0,131,0C87.3,0,44,0,22,0L0,0Z"></path></svg>
 
-        <div class="web2">
+            <!-- Spider web -->
+            <div class="web">
+                <div class="l_web">
 
-        </div>
-        <div class="spider_line">
+                </div>
 
-        </div>
-        <div class="spider">
+                <div class="r_web">
 
-        </div>
-    </div>
-
-    <div class="svg">
-        <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,192L21.8,186.7C43.6,181,87,171,131,186.7C174.5,203,218,245,262,240C305.5,235,349,181,393,186.7C436.4,192,480,256,524,261.3C567.3,267,611,213,655,202.7C698.2,192,742,224,785,197.3C829.1,171,873,85,916,80C960,75,1004,149,1047,186.7C1090.9,224,1135,224,1178,202.7C1221.8,181,1265,139,1309,122.7C1352.7,107,1396,117,1418,122.7L1440,128L1440,0L1418.2,0C1396.4,0,1353,0,1309,0C1265.5,0,1222,0,1178,0C1134.5,0,1091,0,1047,0C1003.6,0,960,0,916,0C872.7,0,829,0,785,0C741.8,0,698,0,655,0C610.9,0,567,0,524,0C480,0,436,0,393,0C349.1,0,305,0,262,0C218.2,0,175,0,131,0C87.3,0,44,0,22,0L0,0Z"></path></svg>
-    </div>
-
-    <div class="pop">
-        <p>
-            BOOO!
-        </p>
-    </div>
-
-    <div class="l_container">
-
-        <div class="intro_left m_top">
-            <h1 class="orange">Halloween Season Is Here</h1>
-            <br>
-            <p>
-                So this <span class="orange">Spooky Season</span> give your houses some makeover and make them look spookiest in the town and give the <span class="orange">Halloween</span> some life.....!
-            </p>
-        </div>
-
-        <div class="intro_right">
-            <div class="house">
-
-            </div>
-        </div>
+                </div>
 
 
-    </div>
+                <!-- moving spider -->
+                <div class="spider">
+                    <div class="line">
 
-    <div class="container2">
-        <div class="intro_left">
-            <div class="makeup">
+                    </div>
 
-            </div>
-        </div>
+                    <div class="spi">
 
-        <div class="intro_right m_top">
-            <h1 class="orange">Get Your Costumes</h1>
-            <br>
-            <p>
-                Get your <span class="orange">Costumes</span> ready and give yourself lil touch of makeup, gather your friends around because this is going to be a long <span class="orange">Spooky</span> night....!
-            </p>
-        </div>
-    </div>
+                    </div>
+                </div>
 
-    <div class="container3">
-        <div class="intro_left m_top">
-            <h1 class="orange">
-                Trick Or Treat
-            </h1>
-            <br>
-            <p>
-                <span class="orange"> Trick Or Treat</span> is an important part of <span class="orange">Halloween</span>, so you better buy come candies and make some goodies from stores for kids who are coming to show you their costumes....!
-            </p>
-        </div>
 
-        <div class="intro_right">
-            <div class="t_t">
+                <!-- moving bat -->
+                <div class="bat">
+                    <div class="line">
 
-            </div>
-        </div>
-    </div>
+                    </div>
 
-    <div class="container4">
+                    <div class="ba">
 
-        <div class="intro_left">
-            <div class="game">
+                    </div>
+                </div>
+
+                <!-- moving pumpkin -->
+                <div class="pumpkin">
+                    <div class="line">
+
+                    </div>
+
+                    <div class="pump">
+
+                    </div>
+                </div>
 
             </div>
 
-        </div>
 
-        <div class="intro_right m_top">
-            <h1 class="orange">
-                Games At Graveyard
-            </h1>
-            <br>
-            <p>
-                Its a <span class="orange"> Spooky Season</span>, so we can't call it a day off without playing games at <span class="orange">Graveyard </span> souls are ready to be your audience and watch you play <span class="orange"> Ouija Or Light As Feather Stiff As Board</span>....!
-            </p>
-        </div>
-    </div>
 
-    <div class="footer">
+        </header>
+        <main>
 
-        <div class="contact_me">
+            <!-- first box -->
+            <div class="box">
 
-            <div class="ouija">
-                <a href="mailto:mahadqureshi410@gmail.com">
-
-                    <p class="black">
-                        Contact Me
+                <div class="text">
+                    <h1 class="orange">Halloween Season Is Here</h1>
+                    <br>
+                    <p>
+                        So this <span class="orange">Spooky Season</span> give your houses some makeover and make them look spookiest in the town and give the <span class="orange">Halloween</span> some life.....!
                     </p>
-                </a>
-            </div>
-            <h1>
-                Made With ❤️ By Mahid Qureshi
-            </h1>
-        </div>
+                </div>
 
-        <div class="f_svg">
-            <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,64L15,85.3C30,107,60,149,90,154.7C120,160,150,128,180,128C210,128,240,160,270,170.7C300,181,330,171,360,181.3C390,192,420,224,450,208C480,192,510,128,540,133.3C570,139,600,213,630,218.7C660,224,690,160,720,122.7C750,85,780,75,810,58.7C840,43,870,21,900,42.7C930,64,960,128,990,160C1020,192,1050,192,1080,186.7C1110,181,1140,171,1170,186.7C1200,203,1230,245,1260,224C1290,203,1320,117,1350,112C1380,107,1410,181,1425,218.7L1440,256L1440,320L1425,320C1410,320,1380,320,1350,320C1320,320,1290,320,1260,320C1230,320,1200,320,1170,320C1140,320,1110,320,1080,320C1050,320,1020,320,990,320C960,320,930,320,900,320C870,320,840,320,810,320C780,320,750,320,720,320C690,320,660,320,630,320C600,320,570,320,540,320C510,320,480,320,450,320C420,320,390,320,360,320C330,320,300,320,270,320C240,320,210,320,180,320C150,320,120,320,90,320C60,320,30,320,15,320L0,320Z"></path></svg>
-        </div>
+                <div class="home">
+
+                </div>
+            </div>
+            <!-- second box -->
+            <div class="box">
+
+                <div class="text" data-aos="fade-right">
+                    <h1 class="orange">Get Your Costumes</h1>
+                    <br>
+                    <p>
+                        Get your <span class="orange">Costumes</span> ready and give yourself lil touch of makeup, gather your friends around because this is going to be a long <span class="orange">Spooky</span> night....!
+                    </p>
+                </div>
+
+                <div class="make_up" data-aos="fade-up">
+
+                </div>
+
+
+            </div>
+
+            <!-- third box -->
+            <div class="box">
+
+                <div class="text" data-aos="fade-right">
+                    <h1 class="orange">
+                        Trick Or Treat
+                    </h1>
+                    <br>
+                    <p>
+                        <span class="orange"> Trick Or Treat</span> is an important part of <span class="orange">Halloween</span>, so you better buy come candies and make some goodies from stores for kids who are coming to show you their costumes....!
+                    </p>
+                </div>
+
+                <div class="trickortreat" data-aos="fade-up">
+
+                </div>
+
+
+            </div>
+
+            <div class="box" data-aos="fade-right">
+
+                <div class="text">
+                    <h1 class="orange">
+                        Games At Graveyard
+                    </h1>
+                    <br>
+                    <p>
+                        Its a <span class="orange"> Spooky Season</span>, so we can't call it a day off without playing games at <span class="orange">Graveyard </span> souls are ready to be your audience and watch you play <span class="orange"> Ouija Or Light As Feather Stiff As Board</span>....!
+                    </p>
+                </div>
+
+                <div class="game" data-aos="fade-up">
+
+                </div>
+
+
+            </div>
+        </main>
+        <footer>
+
+            <div class="f_svg">
+                <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,64L15,85.3C30,107,60,149,90,154.7C120,160,150,128,180,128C210,128,240,160,270,170.7C300,181,330,171,360,181.3C390,192,420,224,450,208C480,192,510,128,540,133.3C570,139,600,213,630,218.7C660,224,690,160,720,122.7C750,85,780,75,810,58.7C840,43,870,21,900,42.7C930,64,960,128,990,160C1020,192,1050,192,1080,186.7C1110,181,1140,171,1170,186.7C1200,203,1230,245,1260,224C1290,203,1320,117,1350,112C1380,107,1410,181,1425,218.7L1440,256L1440,320L1425,320C1410,320,1380,320,1350,320C1320,320,1290,320,1260,320C1230,320,1200,320,1170,320C1140,320,1110,320,1080,320C1050,320,1020,320,990,320C960,320,930,320,900,320C870,320,840,320,810,320C780,320,750,320,720,320C690,320,660,320,630,320C600,320,570,320,540,320C510,320,480,320,450,320C420,320,390,320,360,320C330,320,300,320,270,320C240,320,210,320,180,320C150,320,120,320,90,320C60,320,30,320,15,320L0,320Z"></path></svg>
+
+
+                <div class="love_text">
+                    <p>
+
+                        Made with &nbsp❤️by Mahid Qureshi
+
+                    </p>
+
+                </div>
+
+                <div class="contact_me">
+                    <a href="mailto:mahadqureshi410@gmail.com">
+                        <div class="ouija"> </div>
+                        <p>Contact me</p>
+                    </a>
+                </div>
+
+
+            </div>
+
+
+
+
+
+        </footer>
 
     </div>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 400,
+            duration: 1000
+        });
+    </script>
 </body>
 
 </html>
