--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
 
             <!-- first box -->
             <div class="box">
+                <div class="pic">
+
+
+                    <div class="home">
+
+                    </div>
+                </div>
 
                 <div class="text">
                     <h1 class="orange">Halloween Season Is Here</h1>
@@ -82,12 +89,17 @@
                     </p>
                 </div>
 
-                <div class="home">
 
-                </div>
             </div>
             <!-- second box -->
             <div class="box">
+                <div class="pic">
+
+
+                    <div class="make_up" data-aos="fade-up">
+
+                    </div>
+                </div>
 
                 <div class="text" data-aos="fade-right">
                     <h1 class="orange">Get Your Costumes</h1>
@@ -97,15 +109,20 @@
                     </p>
                 </div>
 
-                <div class="make_up" data-aos="fade-up">
 
-                </div>
 
 
             </div>
 
             <!-- third box -->
             <div class="box">
+                <div class="pic">
+
+
+                    <div class="trickortreat" data-aos="fade-up">
+
+                    </div>
+                </div>
 
                 <div class="text" data-aos="fade-right">
                     <h1 class="orange">
@@ -117,16 +134,20 @@
                     </p>
                 </div>
 
-                <div class="trickortreat" data-aos="fade-up">
-
-                </div>
 
 
             </div>
 
-            <div class="box" data-aos="fade-right">
+            <div class="box">
+                <div class="pic">
 
-                <div class="text">
+
+                    <div class="game" data-aos="fade-up">
+
+                    </div>
+                </div>
+
+                <div class="text" data-aos="fade-right">
                     <h1 class="orange">
                         Games At Graveyard
                     </h1>
@@ -136,9 +157,7 @@
                     </p>
                 </div>
 
-                <div class="game" data-aos="fade-up">
 
-                </div>
 
 
             </div>
