--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <div class="love_text">
                     <p>
 
-                        Made with &nbsp❤️by Mahid Qureshi
+                        Made with &nbsp❤️by <a href="https://mahad410.github.io" target="_blank">Mahid Qureshi</a>
 
                     </p>
 
@@ -198,7 +198,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
-            offset: 200,
+            offset: 100,
             duration: 1000
         });
     </script>
