--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
-            duration: 1000
+            offset: 300,
+            duration: 1200
         });
     </script>
 </body>
