--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="shortcut icon" type="icon/png" href="ouija.png">
+    <link href="https://fonts.googleapis.com/css2?family=Are+You+Serious&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="index.css" <meta charset="UTF-8">
