--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     </h1>
                     <br>
                     <p>
-                        <span class="orange"> Trick Or Treat</span> is an important part of <span class="orange">Halloween</span>, so you better buy come candies and make some goodies from stores for kids who are coming to show you their costumes....!
+                        <span class="orange"> Trick Or Treat</span> is an important part of <span class="orange">Halloween</span>, so you better buy some candies and make some goodies from stores for kids who are coming to show you their costumes....!
                     </p>
                 </div>
 
