--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="icon/png" href="ouija.png">
-    <link href="https://fonts.googleapis.com/css2?family=Are+You+Serious&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="icon/webp" href="ouija.webp">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="index.css" <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -79,7 +77,9 @@
 
 
                     <div class="home">
-
+                        <video autoplay loop="true">
+                        <source src="halloween.webm" type="video/webm">
+                    </video>
                     </div>
                 </div>
 
@@ -99,7 +99,9 @@
 
 
                     <div class="make_up" data-aos="fade-up">
-
+                        <video autoplay loop="true">
+                            <source src="makeup.webm" type="video/webm">
+                        </video>
                     </div>
                 </div>
 
@@ -119,10 +121,10 @@
             <!-- third box -->
             <div class="box">
                 <div class="pic">
-
-
                     <div class="trickortreat" data-aos="fade-up">
-
+                        <video autoplay loop="true">
+                            <source src="tricktreat.webm" type="video/webm">
+                        </video>
                     </div>
                 </div>
 
@@ -145,7 +147,9 @@
 
 
                     <div class="game" data-aos="fade-up">
-
+                        <video autoplay loop="true">
+                            <source src="games.webm" type="video/webm">
+                        </video>
                     </div>
                 </div>
 
