--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
                     <div class="home">
-                        <video autoplay loop="true" playsinline>
+                        <video autoplay loop="true" poster="halloween.webp">
                         <source src="halloween.webm" type="video/webm">
                     </video>
                     </div>
@@ -99,7 +99,7 @@
 
 
                     <div class="make_up" data-aos="fade-up">
-                        <video autoplay loop="true" playsinline>
+                        <video autoplay loop="true" poster="makeup.webp">
                             <source src="makeup.webm" type="video/webm">
                         </video>
                     </div>
@@ -122,7 +122,7 @@
             <div class="box">
                 <div class="pic">
                     <div class="trickortreat" data-aos="fade-up">
-                        <video autoplay loop="true" playsinline>
+                        <video autoplay loop="true" poster="tricktreat.webp">
                             <source src="tricktreat.webm" type="video/webm">
                         </video>
                     </div>
@@ -147,7 +147,7 @@
 
 
                     <div class="game" data-aos="fade-up">
-                        <video autoplay loop="true" playsinline>
+                        <video autoplay loop="true" poster="games.webp">
                             <source src="games.webm" type="video/webm">
                         </video>
                     </div>
